--- a/src/ManasquanBank.Web/css/style.css
+++ b/src/ManasquanBank.Web/css/style.css
@@ -12255,16 +12255,14 @@ footer {
 @media (max-width: 767px) {
   .socialPanel {
     margin-top: 40px;
-  }
-}
-@media (max-width: 1023px) {
-  .socialPanel .containerWrapper {
-    max-width: 100%;
-  }
-}
-@media (max-width: 1023px) {
-  .socialPanel .containerWrapper {
     max-width: 410px;
+    padding: 0 12px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
+@media (max-width: 1023px) {
+  .socialPanel .containerWrapper {
     padding: 0;
   }
 }
